--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -10,6 +10,7 @@ collections:
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields: 
+      - { label: "Title", name: "title", widget: "string" }
       - { label: "ID", name: "id", widget: "string" }
       - { label: "Category", name: "category", widget: "string" }
       - { label: "Tags", name: "tags", widget: "string", default: "vid" }
