--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -12,6 +12,7 @@ collections:
     fields: 
       - { label: "Persian Title", name: "name", widget: "string" }
       - { label: "Code Title", name: "title", widget: "string" }
+      - { label: "Tags", name: "tags", widget: "string", default: "category" }
 
   - name: 'vid'
     label: 'video'
